# Reynolds-flocking-rules-Ros

./: .gitignore  README.md
robot_flock/: CMakeLists.txt  package.xml
robot_flock/config/: robotFlock.cfg
robot_flock/include/robot_flock/: robot.h  robotRosInterface.h
robot_flock/launch/: launch.launch
robot_flock/src/: readme.md  robot.cpp  robotRosInterface.cpp  robot_flock_node.cpp
sphero_simulation/sphero_stage/launch/: launch_params.yaml
sphero_simulation/sphero_stage/resources/worlds/: empty_10x10_10.world  empty_10x10_2.world  empty_10x10_20.world  empty_10x10_3.world  empty_10x10_4.world  empty_10x10_5.world  empty_10x10_7.world  empty_10x10_8.world  test_10x10_20.world
