<?xml version="1.0"?>
<package format="2">
  <name>robot_flock</name>
  <version>0.0.0</version>
  <description>The robot_flock package</description>

  <maintainer email="ahmad.m.rashed@outlook.com">ahm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>

  </export>
</package>
